--- a/cadastro.html
+++ b/cadastro.html
@@ -54,9 +54,9 @@
                                 <td><label> <font color="white">Sexo:</font> </label></td>
                             <td>
                                 <label><input type="radio" id="sexo" name="sexo" value="M" required />
-                                    Masculino</label>
+                                    <font color="white">Masculino</font></label>
                                 <label><input type="radio" id="sexo" name="sexo" value="F" required />
-                                    Feminino</label>
+                                     <font color="white">Feminino</font></label>
                             </td>
                         </tr>
                             
